--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,13 @@
 body {
   font-family: 'Outfit', sans-serif;
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+html, body {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
